--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,34 +6,22 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: core
-      - name: Test
-        run: cargo test --manifest-path core/Cargo.toml
-
-  lint:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
-      - name: Format
-        run: cargo fmt --manifest-path core/Cargo.toml -- --check
-      - name: Clippy
-        run: cargo clippy --manifest-path core/Cargo.toml -- -D warnings
+      - uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: core
+      - run: cargo fmt --manifest-path core/Cargo.toml -- --check
+      - run: cargo clippy --manifest-path core/Cargo.toml -- -D warnings
+      - run: cargo test --manifest-path core/Cargo.toml
 
-  build-macos:
+  build:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -43,5 +31,17 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: core
-      - name: Build Core
-        run: cargo build --manifest-path core/Cargo.toml --release
+      - run: cargo build --manifest-path core/Cargo.toml --release
+
+  draft-release:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - uses: release-drafter/release-drafter@v6
+        with:
+          config-name: release-drafter-config.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
