--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,11 +1,11 @@
-[package]
+﻿[package]
 name = "gonhanh-core"
 version = "0.1.0"
 edition = "2021"
 authors = ["Kha Phan <nhatkha1407@gmail.com>"]
 license = "GPL-3.0-or-later"
 description = "Gõ Nhanh - Vietnamese input method core engine"
-repository = "https://github.com/khaphanspace/gonhanh.org"
+repository = "https://github.com/nguyennhuanhle/gonhanh.org"
 
 [lib]
 name = "gonhanh_core"
