--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
-blank_issues_enabled: true
+﻿blank_issues_enabled: true
 contact_links:
   - name: 💬 Thảo luận
-    url: https://github.com/khaphanspace/gonhanh.org/discussions
+    url: https://github.com/nguyennhuanhle/gonhanh.org/discussions
     about: Đặt câu hỏi và thảo luận ý tưởng
